fixing font visibility problem in notes
[#72080176]

--- a/app/assets/stylesheets/controllers/dashboard.scss
+++ b/app/assets/stylesheets/controllers/dashboard.scss
@@ -346,6 +346,7 @@ body.dashboard {
         float: left;
         padding: 2px 30px 2px 0px;
         position: relative;
+        color: #000;
       }
 
       .note-img {
